# portfolio

./: .env  404.html  CNAME  Cargo.toml  README.md  Trunk.toml  index.html  postgrest.conf  therasuldev-web-app-1219d89934996e8b_bg.wasm  therasuldev-web-app-2211a7eefb82fb5b_bg.wasm  therasuldev-web-app-2be9a19a67c9df25.js  therasuldev-web-app-2be9a19a67c9df25_bg.wasm  therasuldev-web-app-45c0daa0439fd6cf.js  therasuldev-web-app-45c0daa0439fd6cf_bg.wasm  therasuldev-web-app-6961576ca114eba0.js  therasuldev-web-app-6961576ca114eba0_bg.wasm  therasuldev-web-app-8e37ffdfbbcc7980.js  therasuldev-web-app-8e37ffdfbbcc7980_bg.wasm  therasuldev-web-app-9795234daf449bf2.js  therasuldev-web-app-9795234daf449bf2_bg.wasm  therasuldev-web-app-b0863b3da3ce7415.js  therasuldev-web-app-b82b4700d54fe24e_bg.wasm  therasuldev-web-app-ba6c6f48d524c1cc.js  therasuldev-web-app-ba6c6f48d524c1cc_bg.wasm  therasuldev-web-app-cb6589cfa9023135.js  therasuldev-web-app-cb6589cfa9023135_bg.wasm  therasuldev-web-app-d9915574f15a8130.js  therasuldev-web-app-d9915574f15a8130_bg.wasm  therasuldev-web-app-e573a03f12ac0c85.js  therasuldev-web-app-e573a03f12ac0c85_bg.wasm  therasuldev-web-app-f873ea996f93e75f.js  therasuldev-web-app-f873ea996f93e75f_bg.wasm
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/models/: contact.rs  mod.rs  project.rs  user.rs  work_experience.rs
backend/src/routes/: contact_routes.rs  mod.rs  profile_routes.rs  project_routes.rs  work_experience_routes.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: contacts_section.rs  (+4 more)
(+25 files in other folders)
