[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = "0.14"
dotenv = "0.15.0"
postgrest = "1.6.0"
