[package]
name = "therasuldev-web-app"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
yew-router = "0.18.0"
wasm-bindgen = "0.2.99"
js-sys = "0.3.60"
yew-style-in-rs = "0.4.1"
route = "0.2.0"